# loto

./: .mypy.ini  .pre-commit-config.yaml  Justfile  README.md  loto.py  setup.cfg  tox.ini
loto_data/euromillion/: euromillions_202002.csv
loto_data/loto/: loto_201911.csv
tests/: test_loto.py
