[metadata]
version = 0.0.1
author = Kobajaski
description = API pour les tirage FDJ
name = loto

[options]
py_modules = loto
install_requires =
    click >=8.1.2
python_requires = >=3.10

[options.extras_require]
tests =
    pytest
    pytest-cov
linting =
    flake8
formatting =
    autopep8
    isort
typing =
    mypy
security =
    safety
    bandit
complexity =
    xenon
dev =
    loto[tests,linting,formatting,typing,security,complexity]
    pre-commit
    tox

[options.entry_points]
console_scripts =
    loto = loto:main
